# moonbar

./: .clang-format  .clang-tidy  CMakeLists.txt  Doxyfile.in  README.md  Taskfile.yml  iwyu.imp  lldbinit.py  main.c  vcpkg.json
bindings/: CMakeLists.txt
bindings/bar/: CMakeLists.txt  bar_bindings.c  bar_bindings.h
bindings/button/: CMakeLists.txt  button_bindings.c  button_bindings.h
bindings/event/: CMakeLists.txt  event_bindings.c  event_bindings.h
bindings/label/: CMakeLists.txt  label_bindings.c  label_bindings.h
bindings/widget/: CMakeLists.txt  widget_bindings.c  widget_bindings.h
include/: moonbar-app.inl.h  moonbar-box.inl.h  moonbar-buffer.inl.h  moonbar-button.inl.h  moonbar-config.inl.h  moonbar-debug.inl.h  moonbar-label.inl.h  moonbar-lua.inl.h  moonbar-process.inl.h  moonbar.h  mybar.h
include/moonbar/: callback.h  event_router.h  luabindings.h
include/mybar/: callback.h  event_router.h  luabindings.h
lua/: bar.lua  battery.lua  event.lua  inspect.lua  moonbar.lua  utils.lua
lua/bar/: button.lua  event.lua  label.lua  widget.lua
lua/moonbar/: arch.lua  box.lua  button.lua  event.lua  label.lua  ui.lua  widget.lua
modules/: CMakeLists.txt
modules/backlight/: CMakeLists.txt  backlight.c  backlight.h  keyboard.c  keyboard.h  upowerctl.c  upowerctl.h
modules/bluetooth/: CMakeLists.txt  bluetooth.c  bluetooth.h  bluetooth_lib.c
modules/power_profiles/: CMakeLists.txt  power_profiles.c  power_profiles.h  power_profiles_lib.c
src/: CMakeLists.txt  api.c  api.h  api_next.c  app.c  app.h  bar.h  box.c  box.h  box_lib.c  box_meta.c  buffer.c  button.c  button.h  button_lib.c  button_meta.c  callback.c  config.c  event.c  event.h  event_router.c  event_router_meta.c  events.c  events_lib.c  events_meta.c  hypr_client.c  label.c  label.h  label_lib.c  label_meta.c  log.h  meta_event_router.c  process.c  state.c  state.h  state_debug.c  state_gtk.c  state_gtk.h  state_lua.c  state_lua.h  (+7 more)
src/hypr/: hypr_event.c  hypr_event.h  hypr_parser.c  hypr_parser.h  hyprctl.c  hyprctl.h
